hphp/hack/test/typecheck/expression_trees/continue.php.like_types.exp
File "continue.php", line 6, characters 13-64:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 42, characters 41-79:
  But got `dynamic` because it is an unenforceable type
File "continue.php", line 7, characters 11-14:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 30, characters 5-43:
  But got `dynamic` because it is an unenforceable type
